<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.StudentEnrollmentActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_top"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="#ffffff">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:src="@drawable/right_arrow"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_enrollment"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/constraint_layout_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="15dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="10dp"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:textColorHint="@color/colorHint"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:hint="@string/name"/>

            <EditText
                android:id="@+id/et_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/et_name"
                app:layout_constraintStart_toStartOf="@+id/et_name"
                app:layout_constraintEnd_toEndOf="@+id/et_name"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorHint"
                android:layout_margin="10dp"
                android:textSize="14sp"
                android:maxLength="10"
                android:inputType="phone"
                android:imeOptions="actionNext"
                android:hint="@string/mobile"/>

            <EditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/et_mobile"
                app:layout_constraintStart_toStartOf="@+id/et_name"
                app:layout_constraintEnd_toEndOf="@+id/et_name"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorHint"
                android:layout_margin="10dp"
                android:textSize="14sp"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:hint="@string/address"/>

            <TextView
                android:id="@+id/tv_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textColor="@color/colorHint"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/et_address"
                app:layout_constraintStart_toStartOf="@+id/et_name"
                android:layout_margin="4dp"/>

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_gender"
                app:layout_constraintStart_toStartOf="@+id/et_name"
                app:layout_constraintEnd_toEndOf="@+id/et_name"
                android:layout_margin="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:text="@string/male"
                    android:textSize="14sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginRight="16dp"
                    android:enabled="true"
                    android:gravity="center"/>

                <RadioButton
                    android:id="@+id/radio_female"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:text="@string/female"
                    android:textSize="14sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginRight="16dp"
                    android:enabled="true"
                    android:gravity="center"/>

                <RadioButton
                    android:id="@+id/radio_trans"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:text="@string/trans"
                    android:textSize="14sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginRight="16dp"
                    android:enabled="true"
                    android:gravity="center"/>

            </RadioGroup>

            <EditText
                android:id="@+id/et_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/radio_group"
                app:layout_constraintStart_toStartOf="@+id/et_name"
                app:layout_constraintEnd_toEndOf="@+id/et_name"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorHint"
                android:layout_margin="10dp"
                android:textSize="14sp"
                android:focusableInTouchMode="false"
                android:focusable="false"
                android:hint="@string/dob"/>

            <Spinner
                android:id="@+id/spinner_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/et_dob"
                app:layout_constraintStart_toStartOf="@+id/et_name"
                app:layout_constraintEnd_toEndOf="@+id/et_name"
                android:layout_margin="10dp"/>

            <Spinner
                android:id="@+id/spinner_department"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/spinner_year"
                app:layout_constraintStart_toStartOf="@+id/et_name"
                app:layout_constraintEnd_toEndOf="@+id/et_name"
                android:layout_margin="10dp"/>

            <Button
                android:id="@+id/btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textColor="@color/colorWhite"
                android:background="@color/colorGreen"
                android:textSize="14sp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_department"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>